[package]
name = "retrojam"
version = "0.1.0"
edition = "2024"

[dependencies]
raylib = {version = "5.5.1", features = []}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.bundle]
name = "Sisyphus"
identifier = "com.lospolloshermanos.sisyphus"
icon = ["icon.icns"]
version = "1.0.0"
resources = ["assets/"]
copyright = "Free"
category = "public.app-category.games"
short_description = "A game developed for IEEE RetroJam 2025 using Raylib and Rust about Rebirth"
long_description = ""
